@@ -1,3 +1,4 @@
+	* fixed merkle tree torrent creation bug
 	* fixed crash with empty url-lists in torrent files
 	* added missing max_connections() function to python bindings
 
